--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,6 +2,9 @@ kamon {
   environment {
     service = "scala-pb-sample"
   }
+  trace {
+    sampler = "always"
+  }
   jaeger {
 
     # Define the host/port where the Jaeger Collector/Agent is listening.
